Fix github z-index

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -114,7 +114,8 @@ h6 {
 }
 
 /** Structure **/
-.github-banner {
+.github-banner,
+.github-banner img {
   z-index: 999;
 }
 
